tests/syntax/bad/testfile-bad_ident1-1.scala
class 1A { }
object Main { def main(args: Array[String]) { } }
